# Fractals

./: .gitignore  AbsLine.cpp  AbsLine.h  CMakeLists.txt  Circle.cpp  Circle.h  Drawable.h  EditableLine.cpp  EditableLine.h  EditableLineNode.cpp  EditableLineNode.h  Editing.cpp  Editing.h  EditingGUI.cpp  EditingGUI.h  EditingState.cpp  EditingState.h  EmptyState.cpp  EmptyState.h  EventHandler.h  FractalEditor.cpp  FractalEditor.h  Fractals.vcxproj  Fractals.vcxproj.filters  KochSnowflake.cpp  KochSnowflake.h  LineFractal.cpp  LineFractal.h  MultiLineSnowflake.cpp  MultiLineSnowflake.h  NumFieldExt.cpp  NumFieldExt.h  Observer.h  Point.h  README.md  RelLine.h  RightAngleRect.cpp  RightAngleRect.h  SelLineWidget.cpp  SelLineWidget.h  (+38 more)
extlibs_src/SFML-2.5.1/: CMakeLists.txt
extlibs_src/TGUI-0.9/TGUI/: CMakeLists.txt
header/: CmakeLists.txt  Editing.h  FrameState.h  LFLine.h  LineFractal.h  Viewing.h  ZoomBox.h
header/gui/: EditableLine.h  EditableLineNode.h  EditingGUI.h  NodeID.h  NumFieldExt.h  SelLineWidget.h
header/state/: EditingState.h  EmptyState.h  ViewingState.h
header/util/: CMakeLists.txt  RightAngleRect.h  Vec2.h  convex_hull.h  debug_printing.h  sfml_conversions.h  vecutil.h
src/: CmakeLists.txt  Editing.cpp  FrameState.cpp  LineFractal.cpp  Source.cpp  Viewing.cpp
src/gui/: CmakeLists.txt  EditableLine.cpp  EditableLineNode.cpp  EditingGUI.cpp  NodeID.cpp  SelLineWidget.cpp  ViewingGUI.cpp  WidgetHoriStack.cpp  ZoomBox.cpp
src/state/: CmakeLists.txt  EditingState.cpp  ViewingState.cpp
src/util/: CMakeLists.txt  Vec2.cpp  convex_hull.cpp
